--- a/options.conf
+++ b/options.conf
@@ -2,7 +2,7 @@
 name = s3transfer
 url = https://pypi.debian.net/s3transfer/s3transfer-0.1.13.tar.gz
 archives = 
-giturl = 
+giturl = https://github.com/boto/s3transfer.git
 
 [autospec]
 # build 32 bit libraries
